# nr_2

./: .dockerignore  .gitignore  README.md  builddocker-local.bat  entrypoint.sh  main.py  pyproject.toml  requirements.txt  run.bat  run_test.bat  test_url_integration.bat
.github/: copilot-instructions.md
data/: geo_places.json  sources.json
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
scripts/: create_user_score_words_table.py  delete_all_geo_tags.py  deploy-config.json  deploy-env.ps1  deploy.ps1  generate_geo_places.py  geo_tag_all_articles.py  list_geo_tags.py  manage.ps1  pull_daemon_log.ps1  setup-ssl.ps1  setup-ssl.sh  setup_env.ps1  test.py
tests/: conftest.py  test.py  test_admin_43_dashboard.py  test_auth_31_validate_username.py  test_auth_32_validate_password.py  test_auth_33_hash_verify.py  test_auth_34_register_user.py  test_auth_35_register_duplicate.py  test_auth_36_login_success.py  test_auth_37_login_failure.py  test_auth_38_get_current_user.py  test_auth_39_logout.py  test_auth_40_change_password.py  test_daemon_60_behaviors.py  test_db_01_user_creation.py  test_db_02_duplicate_user.py  test_db_03_update_email.py  test_db_04_default_preferences.py  test_db_05_update_preference.py  test_db_06_create_session.py  test_db_07_validate_session.py  test_db_08_invalidate_session.py  test_db_09_save_article.py  test_db_10_save_article_thumbnail.py  test_db_11_get_articles_limit.py  test_db_12_get_articles_ordering.py  test_db_13_get_articles_user_score.py  test_db_14_update_article_score_global.py  test_db_15_update_article_score_user.py  (+33 more)
(+21 files in other folders)
